# easyjetdealscrapper

./: .gitignore  IMPROVEMENT_OPTIONS.md  IMPROVEMENT_SUMMARY.md  README.md  WINDOWS_TROUBLESHOOTING.md  build_windows.py  config.py  easyjet_scraper.py  enhanced_easyjet_scraper.py  example_usage.py  gui_scraper.py  icon_placeholder.txt  improved_easyjet_scraper.py  portable_launcher.py  pyproject.toml  requirements.txt  run_scraper.py  setup.py  setup_venv.py  setup_windows.bat  setup_windows.ps1  setup_windows_improved.bat  test_setup.py  version_info.txt  web_gui.py  windows_deployment_guide.md
templates/: error.html  index.html  no_results.html  results.html
